# bespokeasm

./: .editorconfig  .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CODEOWNERS  Makefile  Pipfile  README.md  pyproject.toml  pytest.ini  requirements.txt  setup.py  test_regex.py  test_word_endianness.py
.cursor/: config.json  rules.yaml
.github/workflows/: python-package.yml  release-artifacts.yml
bespokeasm/: __init__.py  __main__.py  assembler.py  instruction_parser.py  line_parser.py  packed_bits.py  utilities.py
bespokeasm/assembler/: __init__.py  assembly_file.py  engine.py  keywords.py  line_identifier.py
bespokeasm/configgen/: __init__.py
bespokeasm/expression/: __init__.py
bespokeasm/line_object/: __init__.py  data_line.py  directive_line.py  instruction_line.py  label_line.py
docs/: compilation-control-requirements.md  isa-documentation.md  named-memory-zones-requirements.md  operand-label-project-plan.md  vim-semantic-and-hover-plan.md  vim-syntax-improvement-plan.md
examples/: eater-sap1-isa.json  eater-sap1-isa.yaml  kamprath-16bit-addr-4bit-instructions.yaml
examples/ben-eater-sap1/: README.md  add-values.sap1  counting-loop.sap1  divide-values.sap1  eater-sap1-enhanced-isa.yaml  eater-sap1-isa.yaml  fibonacci-loop.sap1e  fibonacci.sap1  microcode_eeprom_with_flags_enhanced.ino  multiplication.sap1  multiply-values.sap1  times-2-loop.sap1e
examples/gmc4/: README.md  count-up.gmc4  gmc4-isa.yaml  key-echo.gmc4
examples/intel-8085/: README.md  intel-8085.yaml
examples/kenbak-1/: README.md  kenbak-1-isa.yaml  led-bouncer.kb1  led-chaser.kb1
examples/mostek-3870/: README.md  mostek-3870.yaml
examples/slu4-minimal-64/: README.md  bubbles.min64  hello-world.min64  mathlib.min64  random-maze.min64  slu4-minimal-64.yaml
examples/slu4-minimal-64x4/: README.md  slu4-minimal-64x4.yaml
examples/slu4-minimal-64x4-redux/: README.md  slu4-minimal-64x4-redux.yaml
examples/slu4-minimal-cpu/: README.md  hello.min-asm  hello.slu4  mathlib.min-asm  os_symbols.min-asm  os_symbols.slu4  primes32.min-asm  random-maze.min-asm  random_stars.min-asm  slu4-minimal-cpu.yaml  stringlib.min-asm
scripts/: read_project_metadata.py  regenerate_example_extensions.sh
src/bespokeasm/: __init__.py  __main__.py  cli.py  cli_completion.py  completion_cli.py  utilities.py
test/: __init__.py  test_assembler_model.py  test_assembler_model_properties.py  test_bytecode.py  test_bytecode_words.py  test_cli_completion.py  test_conditional_include.py  test_configgen.py  test_data_line_word_sizes.py  test_directive_lines.py  test_engine.py  test_expression.py  test_general_warnings.py  test_include_paths.py  test_instruction_aliases.py  test_instruction_macros.py  test_instruction_model.py  test_instruction_parser.py  test_instruction_parsing.py  test_label_scope.py  test_language_version_evaluator.py  test_line_object_utility.py  test_line_objects.py  test_line_parser.py  test_memory_zones.py  test_named_scope_directives.py  test_named_scope_file_restrictions.py  test_named_scope_isolation.py  test_named_scope_warnings.py  test_predefined_data_line.py  test_preprocessor_error.py  test_preprocessor_print.py  test_preprocessor_symbols.py  test_pretty_printer_intelhex.py  test_pretty_printer_listing.py  test_pretty_printing.py  test_string_handling.py  test_sublime_hover.py  test_utilities.py  test_value.py  (+4 more)
test/config_files/: eater-sap1-isa.yaml  register_argument_exmaple_config.yaml  test_16bit_data_words.yaml  test_bad_registers_in_configuratin.yaml  test_compilation_control.yaml  test_compiler_features.yaml  test_decorator_operands.yaml  test_default_numeric_base.yaml  test_indirect_indexed_register_operands.yaml  test_instruction_aliases.yaml  test_instruction_line_creation_little_endian.yaml  test_instruction_list_creation_isa.json  test_instruction_macros.yaml  test_instruction_macros_operand_labels.yaml  test_instruction_operands.yaml  (+10 more)
(+221 files in other folders)
